[tool.poetry]
name = "prometheus-aws-cost-exporter"
version = "0.2.0"
description = ""
authors = ["Ignacio Millán", "Bharath Kumar <bharath.dtu@gmail.com>", "Anton Markelov <doublic@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
apscheduler = "3.10.4"
boto3 = ">=1.34"
botocore = ">=1.34"
click = "8.1.7"
docutils = "0.14"
flask = "3.0.2"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
jmespath = "0.9.3"
markupsafe = ">=2.0"
prometheus-client = "0.20.0"
python-dateutil = "2.9.0.post0"
pytz = "2018.4"
s3transfer = ">=0.9.0"
six = "1.16.0"
tzlocal = ">=2.0"
werkzeug = ">=3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
