[tool.poetry]
name = "prometheus-aws-cost-exporter"
version = "0.2.0"
description = ""
authors = ["Ignacio Millán", "Bharath Kumar <bharath.dtu@gmail.com>", "Anton Markelov <doublic@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
flask = "^3.0.3"
six = "^1.16.0"
pytz = "^2024.1"
prometheus-client = "^0.20.0"
jmespath = "^1.0.1"
jinja2 = "^3.1.4"
itsdangerous = "^2.2.0"
docutils = "^0.21.2"
apscheduler = "^3.10.4"
python-dateutil = "^2.9.0.post0"
s3transfer = "^0.10.1"
werkzeug = "^3.0.3"
markupsafe = "^2.1.5"
botocore = "^1.34.104"
boto3 = "^1.34.104"
requests = "^2.31.0"
google-cloud-bigquery = "^3.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
